Changed some styling and color to themes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: UberMove, UberMoveText, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: UberMoveText, UberMove, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
